# TrilhaBackEndJR-JUN15

./: .env-example  .gitignore  pyproject.toml
migrations/: env.py
migrations/versions/: 75c7db59a4de_create_users_table.py  d0c4a2c6f694_create_labels_table.py  e3c88bd0768b_create_tasks_table.py
src/: dependencies.py  main.py  models.py  schemas.py  security.py  settings.py
src/routers/: auth.py  label.py  task.py  user.py
